@@ -1,3 +1,9 @@
+2005-12-21  Andrew Haley  <aph@redhat.com>
+
+	PR middle-end/25121
+	* recog.c (peephole2_optimize): Don't peephole any
+	RTX_FRAME_RELATED_P insns.
+
 2005-12-21  Kazu Hirata  <kazu@codesourcery.com>
 
 	* tree-data-ref.c (estimate_niter_from_size_of_data): Replace
